Connected with authapi. Added some services.

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
   <script src="avRegistration/login-directive/login-directive.js" class="app"></script>
   <script src="avRegistration/register-controller/register-controller.js" class="app"></script>
   <script src="avRegistration/register-directive/register-directive.js" class="app"></script>
+  <script src="avRegistration/registration-service.js" class="app"></script>
 
   <script src="test/test.js" class="app"></script>
 
