--- a/avRegistration/register-directive/register-directive.html
+++ b/avRegistration/register-directive/register-directive.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-offset-4 col-xs-4">
+    <h1 class="text-center">{{name}}</h1>
     <h1 ng-i18next="avRegistration.registerHeader" class="text-center"></h1>
     <form role="form">
       <div id="signupForm" class="form-horizontal">
@@ -13,7 +14,7 @@
         </div>
       </div>
 
-      <button class="btn btn-block" ng-i18next="avRegistration.registerButton">
+      <button class="btn btn-block" ng-i18next="avRegistration.registerButton" ng-click="signUp()">
       </button>
     </form>
   </div>
