improving the extensibility of the results directive

--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
   <script src="avElection/init.js" class="app"></script>
   <script src="avElection/results-controller/results-controller.js" class="app"></script>
   <script src="avElection/results-directive/results-directive.js" class="app"></script>
+  <script src="avElection/question-results-directive/question-results-directive.js" class="app"></script>
+  <script src="avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.js" class="app"></script>
 
   <!-- registration -->
   <script src="avRegistration/init.js" class="app"></script>
