--- a/avElection/results-directive/results-directive.html
+++ b/avElection/results-directive/results-directive.html
@@ -1,30 +1,9 @@
 <div class="container">
   <div class="row">
     <h1 ng-i18next="[i18next]({title: election.pretty_name})avElection.resultsHeader"></h1>
+    <p ng-i18next="[i18next]({date: last_updated})avElection.resultsLastUpdated"></span>
+    </p>
   </div>
-  <div class="row" ng-repeat="question in questions">
-    <h2>{{question.question}}</h2>
-    <div class="col-xs-12 col-md-6">
-      <table class="table table-hover table-condensed results">
-        <thead>
-          <tr>
-            <th ng-i18next="avElection.resultsTableCandidateHeader"></th>
-            <th ng-i18next="avElection.resultsTableVotesHeader" class="text-right"></th>
-            <th ng-i18next="avElection.resultsTableVotesPercentageHeader" class="text-right"></th>
-            <th ng-i18next="avElection.resultsTablePositionHeader" class="text-right"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="answer in question.answers">
-            <td>{{answer.value}}</td>
-            <td class="text-right">{{addDotsToIntNumber(answer.total_votes)}}</td>
-            <td class="text-right">{{percentVotes(answer, question)}}</td>
-            <td class="text-right">{{winnerPosition(answer)}}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="col-xs-12 col-md-6">
-    </div>
+  <div class="row" ng-repeat="question in election.questions_data" av-question-results>
   </div>
 </div>
