Basic Themes support
Themes less files should be placed in the themes folder.

Javascript code to change the theme:
> avThemes.change("test")
> avThemes.change("default")

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta charset="utf-8" />
-    <link href="app.less" type="text/css" rel="stylesheet/less" />
-    <link href="avb-start-loading.css" rel="stylesheet" type="text/css" />
+    <link href="themes/default/app.less" type="text/css" rel="stylesheet/less" />
+    <link href="themes/default/app.less" type="text/css" rel="stylesheet/less" />
   </head>
 <body>
   <!-- Livereload script for development only (stripped during dist build) -->
@@ -48,6 +48,9 @@
 
   <!-- Configuration file JS -->
   <script src="avConfig.js"></script>
+
+  <!-- Themes JS -->
+  <script src="avThemes.js"></script>
 
   <!-- Main App JS -->
   <script src="avUi/avUi.js" class="app"></script>
