--- a/avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.html
+++ b/avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.html
@@ -1,10 +1,37 @@
 <h2>{{question.question}}</h2>
-<div class="col-xs-12 col-md-6 pull-right">
+<div class="col-xs-12 col-md-4 col-md-offset-1 pull-right">
+  <div av-bar bind="bars_data"></div>
+
+  <table class="table table-hover table-condensed resume">
+    <caption ng-i18next="avElection.resultsSummary"></caption>
+    <tbody>
+      <tr>
+        <td ng-i18next="avElection.totalNumberOfVotes" class="title"></td>
+        <td class="text-right">{{addDotsToIntNumber(question.totals.all_votes)}}</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td ng-i18next="avElection.validVotes" class="title"></td>
+        <td class="text-right">{{addDotsToIntNumber(question.totals.valid_votes)}}</td>
+        <td class="text-right">{{percentVotes(question.totals.valid_votes, question, "over-all-votes")}}</td>
+      </tr>
+      <tr>
+        <td ng-i18next="avElection.blankVotes" class="title"></td>
+        <td class="text-right">{{addDotsToIntNumber(question.totals.blank_votes)}}</td>
+        <td class="text-right">{{percentVotes(question.totals.blank_votes, question, "over-all-votes")}}</td>
+      </tr>
+      <tr>
+        <td ng-i18next="avElection.nullVotes" class="title"></td>
+        <td class="text-right">{{addDotsToIntNumber(question.totals.null_votes)}}</td>
+        <td class="text-right">{{percentVotes(question.totals.null_votes, question, "over-all-votes")}}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
-<div class="col-xs-12 col-md-6">
+<div class="col-xs-12 col-md-7">
   <table class="table table-hover table-condensed results">
     <thead>
-      <tr class="warning">
+      <tr>
         <th ng-i18next="avElection.resultsTableCandidateHeader"></th>
         <th ng-i18next="avElection.resultsTableVotesHeader" class="text-right"></th>
         <th ng-i18next="avElection.resultsTableVotesPercentageHeader" class="text-right"></th>
@@ -12,10 +39,13 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="answer in question.answers" ng-class="{winner: winnerPosition(answer) > 0}">
+      <tr
+          ng-repeat="answer in question.answers"
+          ng-class="{winner: winnerPosition(answer) > 0}"
+          style="background: linear-gradient(to right, rgba(240,240,240,1) 0%,rgba(240,240,240,1) {{percentVotes(answer.total_votes, question)}},rgba(255,255,255,1) {{percentVotes(answer.total_votes, question)}},rgba(255,255,255,1) 100%);">
         <td>{{answer.value}}</td>
         <td class="text-right">{{addDotsToIntNumber(answer.total_votes)}}</td>
-        <td class="text-right">{{percentVotes(answer, question)}}</td>
+        <td class="text-right">{{percentVotes(answer.total_votes, question)}}</td>
         <td class="text-right">{{winnerPosition(answer)}}</td>
       </tr>
     </tbody>
