--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
   <script src="avRegistration/login-directive/login-directive.js" class="app"></script>
   <script src="avRegistration/register-controller/register-controller.js" class="app"></script>
   <script src="avRegistration/register-directive/register-directive.js" class="app"></script>
+  <script src="avRegistration/validate-controller/validate-controller.js" class="app"></script>
+  <script src="avRegistration/validate-directive/validate-directive.js" class="app"></script>
   <script src="avRegistration/registration-service.js" class="app"></script>
 
   <script src="test/test.js" class="app"></script>
