--- a/avRegistration/validate-directive/validate-directive.html
+++ b/avRegistration/validate-directive/validate-directive.html
@@ -6,6 +6,10 @@
     <form role="form">
       <div id="validateForm" class="form-horizontal">
         <div class="form-group">
+            <input type="text" class="form-control" ng-model="dni"
+                 ng-i18next="[placeholder]avRegistration.dniPlaceholder" />
+        </div>
+        <div class="form-group">
             <input type="text" class="form-control" ng-model="tlf"
                  ng-i18next="[placeholder]avRegistration.tlfPlaceholder" />
         </div>
