--- a/avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.html
+++ b/avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.html
@@ -26,7 +26,7 @@
     </tbody>
   </table>
 </div>
-<div class="col-xs-12 col-md-7">
+<div class="col-xs-12 col-md-7 no-padding-left">
   <table class="table table-hover table-condensed results">
     <thead>
       <tr>
