--- a/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.html
+++ b/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.html
@@ -1,7 +1,7 @@
 <div
   class="opt-data"
   ng-click="toggleSelectItem(option)">
-  <h4 class="show-value">{{option.value}}</h4>
+  <h4 class="show-value">{{option.text}}</h4>
   <div class="show-remove">
     <span ng-i18next="avBooth.removeSelectedItem"></span>
     <span class="glyphicon glyphicon-remove"></span>
