--- a/avBooth/multi-question-directive/multi-question-directive.html
+++ b/avBooth/multi-question-directive/multi-question-directive.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row avb-top-navbar">
       <div class="pull-left"
-        ng-i18next="[i18next]({sprintf:['2','3', stateData.questionNum+1, election.questions_data.length]})avBooth.stepAndQuestionNumber">
+        ng-i18next="[i18next]({sprintf:['2','3', stateData.questionNum+1, election.questions.length]})avBooth.stepAndQuestionNumber">
       </div>
       <div class="pull-right">
         <span
@@ -20,7 +20,7 @@
   <div class="navbar-unfixed-top text-center" av-collapsing=".unfixed-top-height" data-toggle-selector="[avb-multi-question] #avb-toggle">
     <div class="container">
       <div class="hidden unfixed-top-height"></div>
-      <h1>{{stateData.question.question}}</h1>
+      <h1>{{stateData.question.title}}</h1>
       <p>{{stateData.question.description}}</p>
     </div>
   </div>
