--- a/avBooth/simple-selected-option-directive/simple-selected-option-directive.html
+++ b/avBooth/simple-selected-option-directive/simple-selected-option-directive.html
@@ -1,4 +1,4 @@
-<span class="show-value">{{option.value}}</span>
+<span class="show-value">{{option.text}}</span>
 <div class="show-remove">
   <span ng-i18next="avBooth.removeSelectedItem"></span>
   <span class="glyphicon glyphicon-remove"></span>
