change also avElection to the new format

--- a/avElection/results-directive/results-directive.html
+++ b/avElection/results-directive/results-directive.html
@@ -30,6 +30,6 @@
       <a href="https://agoravoting.com" class="agoralogo" target="_blank"></a>
     </div>
   </div>
-  <div class="row" ng-repeat="question in election.questions_data" av-question-results index="{{$index}}">
+  <div class="row" ng-repeat="question in election.questions" av-question-results index="{{$index}}">
   </div>
 </div>
