--- a/avRegistration/login-directive/login-directive.html
+++ b/avRegistration/login-directive/login-directive.html
@@ -4,21 +4,21 @@
     <h1 ng-i18next="avRegistration.loginHeader" class="text-center"></h1>
     <form role="form">
       <div class="form-group">
-        <input type="text" class="form-control" id="emailText" ng-i18next="[placeholder]avRegistration.emailPlaceholder" />
+        <input type="text" class="form-control" id="emailText" ng-i18next="[placeholder]avRegistration.emailPlaceholder" tabindex="1" autofocus/>
         <p class="help-block">
           <span ng-i18next="avRegistration.notRegisteredYet"></span>
-          <a ng-i18next="avRegistration.registerHere" href="#/register"></a>
+          <a ng-i18next="avRegistration.registerHere" href="#/register" tabindex="5"></a>
         </p>
       </div>
 
       <div class="form-group">
-        <input type="password" class="form-control" id="passwordText" ng-i18next="[placeholder]avRegistration.passwordPlaceholder" />
+        <input type="password" class="form-control" id="passwordText" ng-i18next="[placeholder]avRegistration.passwordPlaceholder" tabindex="2" />
         <p class="help-block">
-          <a ng-i18next="avRegistration.forgotPassword" ng-click="forgotPassword()"></a>
+          <a ng-i18next="avRegistration.forgotPassword" ng-click="forgotPassword()" tabindex="5"></a>
         </p>
       </div>
 
-      <button class="btn btn-block" ng-i18next="avRegistration.loginButton">
+      <button class="btn btn-block" ng-i18next="avRegistration.loginButton" tabindex="3">
       </button>
     </form>
   </div>
