--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
   <script src="avRegistration/validate-directive/validate-directive.js" class="app"></script>
   <script src="avRegistration/registration-service.js" class="app"></script>
 
+  <!-- Admin -->
+  <script src="avAdmin/init.js" class="app"></script>
+  <script src="avAdmin/elections-controller/elections-controller.js" class="app"></script>
+  <script src="avAdmin/elections-directive/elections-directive.js" class="app"></script>
+  <script src="avAdmin/admin-service.js" class="app"></script>
+
   <script src="test/test.js" class="app"></script>
 
   <!-- for security, we do not include the dynamic directive in the app,
