--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
   <script src="avAdmin/elections-directive/elections-directive.js" class="app"></script>
   <script src="avAdmin/election-form-directive/election-form-directive.js" class="app"></script>
   <script src="avAdmin/questions-directive/questions-directive.js" class="app"></script>
+  <script src="avAdmin/question-directive/question-directive.js" class="app"></script>
   <script src="avAdmin/elections-controller/elections-controller.js" class="app"></script>
   <script src="avAdmin/new-election-controller/new-election-controller.js" class="app"></script>
   <script src="avAdmin/admin-service.js" class="app"></script>
