avAdmin: Added edit election interface and links

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
   <script src="avAdmin/question-directive/question-directive.js" class="app"></script>
   <script src="avAdmin/elections-controller/elections-controller.js" class="app"></script>
   <script src="avAdmin/new-election-controller/new-election-controller.js" class="app"></script>
+  <script src="avAdmin/edit-election-controller/edit-election-controller.js" class="app"></script>
   <script src="avAdmin/admin-service.js" class="app"></script>
 
   <script src="test/test.js" class="app"></script>
