--- a/avAdmin/elections-directive/elections-directive.html
+++ b/avAdmin/elections-directive/elections-directive.html
@@ -30,7 +30,7 @@
                   {{election.end_date|date:'medium'}}
               </a>
 
-              <a href="#" role="button" class="btn btn-warning"
+              <a ui-sref="admin.editelection({ id: election.id })" role="button" class="btn btn-warning"
                 ng-if="election.status == 'notstarted'">
                   <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                   <span ng-i18next="avAdmin.edit"></span>
@@ -60,5 +60,7 @@
             </div>
         </div> <!-- endof buttons column -->
       </div> <!-- endof row -->
-    <a href="#" class="btn-bottom btn btn-block btn-lg btn-plain btn-success" ng-i18next="avAdmin.newElection"></a>
+    <a class="btn-bottom btn btn-block btn-lg btn-plain btn-success"
+        ui-sref="admin.newelection()"
+        ng-i18next="avAdmin.newElection"></a>
 </div>
