adding again support for checking of max num votes reached and changing pcandidates button position to make it flexible

--- a/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
+++ b/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
@@ -130,10 +130,9 @@
         ng-i18next="avBooth.noOptionsSelected">
       </div>
     </div>
-  </div>
 
     <!-- next button -->
-    <div class="row affix-bottom text-center">
+    <div class="row hidden text-center" ng-cloak av-affix-bottom="stateData.affixIsSet" data-force-affix-width="768">
       <p>
         <span
           class="text-brand-warning"
