--- a/avBooth/audit-ballot-screen-directive/audit-ballot-screen-directive.html
+++ b/avBooth/audit-ballot-screen-directive/audit-ballot-screen-directive.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-default navbar-fixed-top" av-affix-top=".navbar-unfixed-top" role="navigation">
   <div class="container">
     <div class="row avb-top-navbar">
+      <div class="pull-left" ng-i18next="[html]avBooth.poweredBy">
+      </div>
+
       <div class="pull-right">
         <span
           class="glyphicon glyphicon-question-sign"
