--- a/avBooth/pcandidates-row-directive/pcandidates-row-directive.html
+++ b/avBooth/pcandidates-row-directive/pcandidates-row-directive.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-5">
+<div class="col-xs-12 col-sm-6 team-title-wrapper">
   <div
     class="team-title"
     ng-click="toggleTeam(team)">
