--- a/avRegistration/login-directive/login-directive.html
+++ b/avRegistration/login-directive/login-directive.html
@@ -1,25 +1,30 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-offset-4 col-xs-4">
+    <h1 class="text-center">{{name}}</h1>
     <h1 ng-i18next="avRegistration.loginHeader" class="text-center"></h1>
-    <form role="form">
-      <div class="form-group">
-        <input type="text" class="form-control" id="emailText" ng-i18next="[placeholder]avRegistration.emailPlaceholder" tabindex="1" autofocus/>
+    <form name="form" role="form">
+      <div id="loginForm" class="form-horizontal">
+        <input type="text" class="form-control" ng-model="login.email" id="emailText"
+                ng-i18next="[placeholder]avRegistration.emailPlaceholder" tabindex="1"
+                ng-pattern="patterns('email')" autofocus required />
+
         <p class="help-block">
           <span ng-i18next="avRegistration.notRegisteredYet"></span>
-          <a ng-i18next="avRegistration.registerHere" href="#/register" tabindex="5"></a>
+          <a href="#" ng-i18next="avRegistration.registerHere" ng-click="goSignup()" tabindex="5"></a>
         </p>
-      </div>
 
-      <div class="form-group">
-        <input type="password" class="form-control" id="passwordText" ng-i18next="[placeholder]avRegistration.passwordPlaceholder" tabindex="2" />
+        <input type="password" class="form-control" ng-model="login.password" id="passwordText"
+                ng-i18next="[placeholder]avRegistration.passwordPlaceholder" tabindex="2" required />
         <p class="help-block">
-          <a ng-i18next="avRegistration.forgotPassword" ng-click="forgotPassword()" tabindex="5"></a>
+          <a href="#" ng-i18next="avRegistration.forgotPassword" ng-click="forgotPassword()" tabindex="5"></a>
         </p>
       </div>
 
-      <button class="btn btn-block" ng-i18next="avRegistration.loginButton" tabindex="3">
+      <button type="submit" class="btn btn-block" ng-i18next="avRegistration.loginButton"
+              ng-click="loginUser(form.$valid)" tabindex="3">
       </button>
     </form>
   </div>
 </div>
+
