adding iframe-resizer for widgets and adding ballot locator widget

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <script src="vendor/crypto/sjcl.js" class="lib"></script>
   <script src="vendor/jquery.nanoscroller/nanoscroller.js" class="lib"></script>
   <script src="vendor/jquery.actual/jquery.actual.js" class="lib"></script>
+  <script src="vendor/iframe-resizer/iframeResizer.contentWindow.min.js" class="lib"></script>
   <!-- Add New Vendor Component JS Above -->
 
   <!-- Configuration file JS -->
@@ -84,6 +85,7 @@
   <script src="avBooth/accordion-selected-option-directive/accordion-selected-option-directive.js" class="app"></script>
   <script src="avBooth/available-options-directive/available-options-directive.js" class="app"></script>
   <script src="avBooth/audit-ballot-screen-directive/audit-ballot-screen-directive.js" class="app"></script>
+  <script src="avBooth/ballot-locator-screen-directive/ballot-locator-screen-directive.js" class="app"></script>
   <script src="avBooth/booth-directive/booth-directive.js" class="app"></script>
   <script src="avBooth/busy-directive/busy-directive.js" class="app"></script>
   <script src="avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.js" class="app"></script>
