fixing ballot locator view

--- a/avBooth/ballot-locator-screen-directive/ballot-locator-screen-directive.html
+++ b/avBooth/ballot-locator-screen-directive/ballot-locator-screen-directive.html
@@ -3,6 +3,13 @@
     <div class="row avb-top-navbar">
       <div class="pull-left" ng-i18next="[html]avBooth.poweredBy">
       </div>
+      <div class="pull-right">
+        <a href="#/election/{{electionId}}/ballot-locator" target="_blank">
+          <span
+            class="glyphicon glyphicon-share">
+          </span>
+        </a>
+      </div>
     </div>
 
   </div>
