showing candidatura no agrupada team in random order

--- a/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
+++ b/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
@@ -132,7 +132,7 @@
     </div>
 
     <!-- next button -->
-    <div class="row hidden text-center" ng-cloak av-affix-bottom="stateData.affixIsSet" data-force-affix-width="768">
+    <div class="row affix-bottom text-center">
       <p>
         <span
           class="text-brand-warning"
