making visible locator found label not editable in ballot locator screen

--- a/avBooth/ballot-locator-screen-directive/ballot-locator-screen-directive.html
+++ b/avBooth/ballot-locator-screen-directive/ballot-locator-screen-directive.html
@@ -48,7 +48,7 @@
         </button>
         <div class="locatorStatus visible-xs" ng-bind-html="locatorStatus"></div>
         <div ng-if="ballot.length > 0">
-          <div class="results" ng-i18next="[html:i18next]({locator:locator})avBooth.locatorFoundText"></div>
+          <div class="results" ng-i18next="[html:i18next]({locator:foundLocator})avBooth.locatorFoundText"></div>
           <div class="ballot">{{ballot}}</div>
         </div>
       </div>
