Admin login/logout using avRegistration and cookies

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <script src="bower_components/angular-resource/angular-resource.js" class="lib"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js" class="lib"></script>
   <script src="bower_components/angular-ui-utils/ui-utils.js" class="lib"></script>
+  <script src="bower_components/angular-cookies/angular-cookies.js" class="lib"></script>
   <script src="bower_components/i18next/i18next.js" class="lib"></script>
   <script src="bower_components/ng-i18next/dist/ng-i18next.js" class="lib"></script>
   <!-- Add New Bower Component JS Above -->
@@ -119,6 +120,7 @@
   <script src="avRegistration/init.js" class="app"></script>
   <script src="avRegistration/login-controller/login-controller.js" class="app"></script>
   <script src="avRegistration/login-directive/login-directive.js" class="app"></script>
+  <script src="avRegistration/logout-controller/logout-controller.js" class="app"></script>
   <script src="avRegistration/register-controller/register-controller.js" class="app"></script>
   <script src="avRegistration/register-directive/register-directive.js" class="app"></script>
   <script src="avRegistration/validate-controller/validate-controller.js" class="app"></script>
