--- a/avAdmin/admin-head-directive/admin-head-directive.html
+++ b/avAdmin/admin-head-directive/admin-head-directive.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="pull-right">
             <span ng-bind="admin"></span> |
-            <a href="#" ng-i18next="avRegistration.logout"></a>
+            <a ui-sref="registration.logout()" ng-i18next="avRegistration.logout"></a>
         </div>
         <div class="hidden unfixed-top-height"></div>
         <h1 class="ng-binding">
