avAdmin: Getting election list from authapi

--- a/avAdmin/elections-directive/elections-directive.html
+++ b/avAdmin/elections-directive/elections-directive.html
@@ -1,3 +1,4 @@
+<div avb-busy ng-if="loading"></div>
 <div class="container-fluid adminlist">
       <div class="row adminelection" ng-repeat="election in elections">
         <div class="col-sm-8">
