adding text to help button

--- a/avBooth/multi-question-directive/multi-question-directive.html
+++ b/avBooth/multi-question-directive/multi-question-directive.html
@@ -10,6 +10,7 @@
           class="glyphicon glyphicon-question-sign"
           ng-click="launchHelp()">
         </span>
+        <span ng-click="launchHelp()" ng-i18next="avBooth.helpTitle"></span>
       </div>
     </div>
 
