--- a/avBooth/audit-ballot-screen-directive/audit-ballot-screen-directive.html
+++ b/avBooth/audit-ballot-screen-directive/audit-ballot-screen-directive.html
@@ -9,6 +9,7 @@
           class="glyphicon glyphicon-question-sign"
           ng-click="launchHelp()">
         </span>
+        <span ng-click="launchHelp()" ng-i18next="avBooth.helpTitle"></span>
       </div>
     </div>
 
