--- a/avBooth/review-screen-directive/review-screen-directive.html
+++ b/avBooth/review-screen-directive/review-screen-directive.html
@@ -8,6 +8,7 @@
           class="glyphicon glyphicon-question-sign"
           ng-click="launchHelp()">
         </span>
+        <span ng-click="launchHelp()" ng-i18next="avBooth.helpTitle"></span>
       </div>
     </div>
 
