--- a/avElection/results-directive/results-directive.html
+++ b/avElection/results-directive/results-directive.html
@@ -2,34 +2,47 @@
 </div>
 <div class="container">
   <div class="row" ng-if="!inside_iframe">
-    <div class="pull-left">
+    <div class="col-xs-12">
       <h1 ng-i18next="[i18next]({title: election.title})avElection.resultsHeader"></h1>
-      <p>
-        <a
-          href="{{electionDataUrl}}"
-          target="_blank"
-          ng-i18next="[alt]avElection.downloadElectionData">
-          <i class="fa fa-fw fa-cloud-download"></i>
-        </a>
-        <a
-          href="{{electionTwitterUrl}}"
-          ng-i18next="[alt]avElection.tweetElection"
-          target="_blank">
-          <i class="fa fa-fw fa-facebook"></i>
-        </a>
-        <a
-          href="{{electionFacebookUrl}}"
-          target="_blank"
-          ng-i18next="[alt]avElection.tweetElection">
-          <i class="fa fa-fw fa-twitter"></i>
-        </a>
-        <span ng-i18next="[i18next]({date: last_updated})avElection.resultsLastUpdated"></span>
-      </p>
     </div>
-    <div class="pull-right">
-      <a href="https://agoravoting.com" class="agoralogo" target="_blank"></a>
+    <div class="col-xs-6">
+      <div class="pull-left">
+        <p>
+          <a
+            href="{{electionDataUrl}}"
+            target="_blank"
+            ng-i18next="[alt]avElection.downloadElectionData">
+            <i class="fa fa-fw fa-cloud-download"></i>
+          </a>
+          <a
+            href="{{electionTwitterUrl}}"
+            ng-i18next="[alt]avElection.tweetElection"
+            target="_blank">
+            <i class="fa fa-fw fa-facebook"></i>
+          </a>
+          <a
+            href="{{electionFacebookUrl}}"
+            target="_blank"
+            ng-i18next="[alt]avElection.tweetElection">
+            <i class="fa fa-fw fa-twitter"></i>
+          </a>
+          <a
+            href="#election/{{election.id}}/results"
+            target="_blank">
+            <span class="glyphicon glyphicon-share"></span>
+          </a>
+          <span ng-i18next="[i18next]({date: last_updated})avElection.resultsLastUpdated"></span>
+        </p>
+      </div>
+    </div>
+    <div class="col-xs-6">
+      <div class="pull-right">
+        <a href="https://agoravoting.com" class="agoralogo" target="_blank"></a>
+      </div>
     </div>
   </div>
-  <div class="row" ng-repeat="question in election.questions" av-question-results index="{{$index}}">
+  <div class="row">
+    <div class="col-xs-12" ng-repeat="question in results.questions" av-question-results index="{{$index}}">
+    </div>
   </div>
 </div>
