making pcandidates cells one line always

--- a/avBooth/pcandidates-cell-directive/pcandidates-cell-directive.html
+++ b/avBooth/pcandidates-cell-directive/pcandidates-cell-directive.html
@@ -12,7 +12,7 @@
   ng-class="{selected: candidates.selected > 0}"
   ng-click="toggleCell(team, question_index)">
   <span class="label label-default label-category">{{question_title}}</span>
-  <span>{{candidates[0].text}}</span>
+  <span class="one-line">{{candidates[0].text}}</span>
 </div>
 
 <!-- shown when the team includes multiple candidates in this column -->
