--- a/avElection/results-directive/results-directive.html
+++ b/avElection/results-directive/results-directive.html
@@ -5,6 +5,8 @@
     <div class="col-xs-12">
       <h1 ng-i18next="[i18next]({title: election.title})avElection.resultsHeader"></h1>
     </div>
+  </div>
+  <div class="row">
     <div class="col-xs-6">
       <div class="pull-left">
         <p>
