--- a/avAdmin/election-form-directive/election-form-directive.html
+++ b/avAdmin/election-form-directive/election-form-directive.html
@@ -1,14 +1,23 @@
 <div class="container">
     <div class="av-admin-form">
         <div class="election-id" ng-if="id">id: <span ng-model="election.id"></span></div>
-        <form novalidate class="form" role="form">
+        <form class="form" role="form" name="form">
             <div class="form-group">
                 <label for="name" ng-i18next="avAdmin.form.name"></label>
-                <input type="text" class="form-control" id="name" ng-model="election.title"/>
+                <input type="text" class="form-control" id="name" name="name"
+                ng-model="election.title" ng-minlength=3 required/>
+                <div class="error" ng-show="form.name.$dirty && form.name.$invalid">
+                    <small class="error" ng-i18next="avAdmin.form.el.titleError"></small>
+                </div>
+
             </div>
             <div class="form-group">
                 <label for="desc" ng-i18next="avAdmin.form.description"></label>
-                <textarea id="desc" class="form-control" ng-model="election.description"></textarea>
+                <textarea id="desc" class="form-control" name="desc"
+                ng-model="election.description" ng-minlength=5 required></textarea>
+                <div class="error" ng-show="form.desc.$dirty && form.desc.$invalid">
+                    <small class="error" ng-i18next="avAdmin.form.el.descriptionError"></small>
+                </div>
             </div>
             <div av-questions questions="election.questions">
             </div>
