Added some test for avAdmin

--- a/avAdmin/question-directive/question-directive.html
+++ b/avAdmin/question-directive/question-directive.html
@@ -1,7 +1,7 @@
 <div class="col-sm-6">
     <div class="form-group">
         <label ng-i18next="avAdmin.form.qText"></label>
-        <textarea class="qtext form-control" ng-model="question.title"></textarea>
+        <textarea id="qtext" class="qtext form-control" ng-model="question.title"></textarea>
     </div>
 
     <!--
